--- a/spring-annotation/src/main/resource/application.properties
+++ b/spring-annotation/src/main/resource/application.properties
@@ -1,1 +1,10 @@
 my.name=zhangmin
+
+my.redis.host=127.0.0.1
+my.redis.port=7011
+my.redis.database=0
+my.redis.timeout=2000
+my.redis.maxActive=8
+my.redis.maxWait=-1
+my.redis.maxIdle=5
+my.redis.minIdle=0
