--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -56,6 +56,11 @@
 		  <artifactId>my-spring-boot-starter-redis-copy</artifactId>
 		  <version>0.0.1-SNAPSHOT</version>
 		</dependency>
-	
+
+		 <dependency>
+		 	<groupId>org.scala-lang</groupId>
+		 	<artifactId>scala-library</artifactId>
+		 	<version>2.11.0</version>
+		 </dependency>
   </dependencies>
 </project>
