--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -36,6 +36,35 @@
 		    <version>1.2.46</version>
 		</dependency>
 		
+		<!-- day45mybatis源码需要的包 -->
+		<dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        
+         <!--  结合log4j.properties 文件打印日志需要的包 -->
+         <dependency>
+            <groupId>org.bgee.log4jdbc-log4j2</groupId>
+            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+            <version>1.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.13</version>
+        </dependency>
+        
 		<!-- day25事务需要的jdbc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
