mybatis打印数据库日志；mybatis懒加载，适配器，缓存

--- a/spring-annotation/src/main/resources/log4j.properties
+++ b/spring-annotation/src/main/resources/log4j.properties
@@ -6,5 +6,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] -%m%n  
  
 #day46ForMybatisLog4jPrintSql.dao 表示dao层所在的整个包路径
-#log4j.logger.day46ForMybatisLog4jPrintSql.dao =TRACE
-log4j.logger.day45ForMyvatisSource.dao =TRACE
+log4j.logger.day46ForMybatisLog4jPrintSql.dao =TRACE
+#log4j.logger.day45ForMyvatisSource.dao =TRACE
+#log4j.logger.day48ForMybatisLayzyLoad =TRACE
+#log4j.logger.day50ForMybatisCache =TRACE
