mybatis整合enchache，redis mybatis源码解析 mybatis鉴别器，懒加载，多查询，驼峰 mybatis枚举适配器的多种实现

--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -84,5 +84,17 @@
 		 	<artifactId>scala-library</artifactId>
 		 	<version>2.11.0</version>
 		 </dependency>
+		 
+		 <!-- day50:mybatis整合二级缓存部分 -->
+		 <dependency>
+		    <groupId>org.mybatis.caches</groupId>
+		    <artifactId>mybatis-ehcache</artifactId>
+		    <version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.caches</groupId> 
+			<artifactId>mybatis-redis</artifactId>
+			 <version>1.0.0-beta1</version>
+		</dependency>
   </dependencies>
 </project>
