--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<elasticsearch.version>5.6.0</elasticsearch.version> 
+	<log4j.version>2.7</log4j.version>	 	
   </properties>
 
   <dependencies>
@@ -96,5 +98,18 @@
 			<artifactId>mybatis-redis</artifactId>
 			 <version>1.0.0-beta1</version>
 		</dependency>
+		
+		<!-- day52es框架依赖的包和日志包 -->
+		<dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>${elasticsearch.version}</version>
+		</dependency>
+		<dependency>
+		            <groupId>org.apache.logging.log4j</groupId>
+		            <artifactId>log4j-core</artifactId>
+		            <version>${log4j.version}</version>
+		</dependency>
+		
   </dependencies>
 </project>
