--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -1,45 +1,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.spring.data</groupId>
-  <artifactId>spring-annotation</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.spring.data</groupId>
+    <artifactId>spring-annotation</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>spring-annotation</name>
-  <url>http://maven.apache.org</url>
+    <name>spring-annotation</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<elasticsearch.version>5.6.0</elasticsearch.version> 
-	<log4j.version>2.7</log4j.version>	 	
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <elasticsearch.version>5.6.0</elasticsearch.version>
+        <log4j.version>2.7</log4j.version>
+    </properties>
 
-  <dependencies>
-  		<!-- spring测试项目的依赖包 -->
-         <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>4.3.2.RELEASE</version>
-		</dependency>
-		
-		<!-- 26dayaop包需要导入的aop -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aspects</artifactId>
-			<version>4.3.2.RELEASE</version>
-		</dependency>
-		
-		<!-- 解析json字符串部分 -->
+    <dependencies>
+        <!-- spring测试项目的依赖包 -->
         <dependency>
-		    <groupId>com.alibaba</groupId>
-		    <artifactId>fastjson</artifactId>
-		    <version>1.2.46</version>
-		</dependency>
-		
-		<!-- day45mybatis源码需要的包 -->
-		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+
+        <!-- 26dayaop包需要导入的aop -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+
+        <!-- 解析json字符串部分 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.46</version>
+        </dependency>
+
+        <!-- day45mybatis源码需要的包 -->
+        <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.0</version>
@@ -49,9 +49,9 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.1</version>
         </dependency>
-        
-         <!--  结合log4j.properties 文件打印日志需要的包 -->
-         <dependency>
+
+        <!--  结合log4j.properties 文件打印日志需要的包 -->
+        <dependency>
             <groupId>org.bgee.log4jdbc-log4j2</groupId>
             <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
             <version>1.16</version>
@@ -66,53 +66,59 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.13</version>
         </dependency>
-        
-		<!-- day25事务需要的jdbc -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>4.3.2.RELEASE</version>
-		</dependency>
-		
-		 <!-- MYSQL -->
-         <dependency>
+
+        <!-- day25事务需要的jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+
+        <!-- MYSQL -->
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.13</version>
-         </dependency>
-        
-		 <dependency>
-		 	<groupId>org.scala-lang</groupId>
-		 	<artifactId>scala-library</artifactId>
-		 	<version>2.11.0</version>
-		 </dependency>
-		 
-		 <!-- day50:mybatis整合二级缓存部分 -->
-		 <dependency>
-		    <groupId>org.mybatis.caches</groupId>
-		    <artifactId>mybatis-ehcache</artifactId>
-		    <version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis.caches</groupId> 
-			<artifactId>mybatis-redis</artifactId>
-			 <version>1.0.0-beta1</version>
-		</dependency>
-		
-		<!-- day52es框架依赖的包和日志包 -->
-		<dependency>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+        <!-- day50:mybatis整合二级缓存部分 -->
+        <dependency>
+            <groupId>org.mybatis.caches</groupId>
+            <artifactId>mybatis-ehcache</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.caches</groupId>
+            <artifactId>mybatis-redis</artifactId>
+            <version>1.0.0-beta1</version>
+        </dependency>
+
+        <!-- day52es框架依赖的包和日志包 -->
+        <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>transport</artifactId>
             <version>${elasticsearch.version}</version>
-		</dependency>
-		<dependency>
-		            <groupId>org.apache.logging.log4j</groupId>
-		            <artifactId>log4j-core</artifactId>
-		            <version>${log4j.version}</version>
-		</dependency>
-		
-		<!-- day53tair组建依赖的包 -->
-		<dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.2.4.RELEASE</version>
+        </dependency>
+
+        <!-- day53tair组建依赖的包 -->
+        <dependency>
             <groupId>com.taobao.tair</groupId>
             <artifactId>tair3-client</artifactId>
             <version>3.10.14</version>
@@ -143,24 +149,30 @@
             </exclusions>
         </dependency>
         <!-- day53tair组建方式二依赖的包 的附属包-->
-		<!-- <dependency>
-			<groupId>de.ruedigermoeller</groupId>
-			<artifactId>fst</artifactId>
-			<version>2.47</version>
-		</dependency> -->
-		
-		<dependency>
+        <!-- <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+            <version>2.47</version>
+        </dependency> -->
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.5.6.RELEASE</version>
         </dependency>
-        
+
         <!-- 实体类中使用@data注解 -->
-		<dependency>
-		  <groupId>org.projectlombok</groupId>
-		  <artifactId>lombok</artifactId>
-		  <version>1.16.10</version>
-		</dependency>
-		
-  </dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
+    </dependencies>
 </project>
