--- a/spring-annotation/pom.xml
+++ b/spring-annotation/pom.xml
@@ -24,6 +24,13 @@
             <version>4.3.2.RELEASE</version>
         </dependency>
 
+        <!-- spring测试项目的依赖包 -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.5.5</version>
+        </dependency>
+
         <!-- 26dayaop包需要导入的aop -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -173,6 +180,13 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
 
     </dependencies>
 </project>
